--- a/solution/web/src/app/components/options/options.component.html
+++ b/solution/web/src/app/components/options/options.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <button class="btn">Draw Rect</button>
-  <button class="btn">Draw Triangle</button>
-  <button class="btn">Draw Circle</button>
+  <button class="btn" (click)="drawShape(1)">Draw Rect</button>
+  <button class="btn" (click)="drawShape(2)">Draw Triangle</button>
+  <button class="btn" (click)="drawShape(3)">Draw Circle</button>
 </div>
