1. add backend code 2. add error page when unable to connect to server 3. add http client api

--- a/solution/web/src/app/components/canvas/canvas.component.html
+++ b/solution/web/src/app/components/canvas/canvas.component.html
@@ -1,5 +1,6 @@
 <h1 style="text-align: center;">Draw Me</h1>
-{{ (toolbar$ | async).state}}
+<!-- {{ (toolbar$ | async).state}} -->
 <canvas #canvas id="canvas" (click)="clicked($event)"></canvas>
 <!-- <canvas #canvas id="canvas" [width]="props.width" [height]="props.height"></canvas> -->
 <!-- <input [(ngModel)]="state" [value]="(toolbar$ | async).state" type="hidden" /> -->
+
