--- a/solution/web/src/app/pages/home/home.component.html
+++ b/solution/web/src/app/pages/home/home.component.html
@@ -1,15 +1,16 @@
 <table>
   <tr>
-    <td>
-      <app-canvas></app-canvas>
-    </td>
-    <td>
-      <app-toolbar></app-toolbar>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <app-options></app-options>
-    </td>
+    <td colspan="2">
+        <app-canvas></app-canvas>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <app-toolbar></app-toolbar>
+      </td>
+      <td>
+        <app-options></app-options>
+      </td>
   </tr>
 </table>
+<app-error></app-error>
