--- a/solution/web/src/app/components/options/options.component.css
+++ b/solution/web/src/app/components/options/options.component.css
@@ -6,7 +6,7 @@
   border: 1px solid lightblue;
   background-color: white;
   height: 50px;
-  margin-right: 20px;
+  margin-left: 16px;
 }
 .main {
   text-align: center;
