--- a/solution/web/src/app/components/toolbar/toolbar.component.html
+++ b/solution/web/src/app/components/toolbar/toolbar.component.html
@@ -1,8 +1,8 @@
 <div class="main">
   <button id="scissor" class="btn" (click)="onClick(STATE_SCISSOR)"
-    [ngClass]="(toolbar$|async).state == STATE_SCISSOR? 'active':''"></button>
+    [ngClass]="(toolbar$|async).state == STATE_SCISSOR? 'active':''" *ngIf="(toolbar$ | async).config && (toolbar$ | async).config.payload.toolbar.scissor"></button>
   <button id="eraser" class="btn" (click)="onClick(STATE_ERASER)"
-    [ngClass]="(toolbar$|async).state == STATE_ERASER? 'active':''"></button>
+    [ngClass]="(toolbar$|async).state == STATE_ERASER? 'active':''" *ngIf="(toolbar$ | async).config && (toolbar$ | async).config.payload.toolbar.eraser"></button>
   <button id="glue" class="btn" (click)="onClick(STATE_GLUE)"
-    [ngClass]="(toolbar$|async).state == STATE_GLUE? 'active':''"></button>
+    [ngClass]="(toolbar$|async).state == STATE_GLUE? 'active':''" *ngIf="(toolbar$ | async).config && (toolbar$ | async).config.payload.toolbar.glue"></button>
 </div>
